--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
   </div>
 </section>
-    <section class="reviews section">
+<section class="reviews section">
   <div class="container reviews__container">
     <h2 class="reviews__title title">Отзывы наших туристов</h2>
 
@@ -207,9 +207,12 @@
             </ul>
             <p class="review__date">20 октября 2022</p>
           </div>
-          <p class="review__text">Хотелось бы поблагодарить ваше агентство за отличный отдых! Во-первых: по обслуживанию
-            — все по нашим хотелкам. После
-            долго выбора — нам наконец нашли отличный вариант, отель…</p>
+          <p class="review__text">Добрый день! Хотим выразить огромную благодарность данному агенству в лице менеждера
+            Марины за ее профессионализм,
+            компетентность, вежливость<span class="dots">…</span><span class="more" style="display: none;">всегда чистые ноги. Лифт — да есть
+              лифт, который
+              спустит вас на пляж, удобно, оперативно! Море — просто
+              прекра</span></p><span class="review__more-btn more-btn">Ещё</span>
         </div>
         <div class="swiper-slide reviews__item review">
           <div class="review__header">
@@ -229,9 +232,12 @@
             </ul>
             <p class="review__date">20 октября 2022</p>
           </div>
-          <p class="review__text">Отличное агентство и вежливые менеджеры, особая благодарность онлайн-менеджеру Марине
-            за отлично подобранный тур и
-            крутой отдых. Обратимся ещё раз обязательно.</p>
+          <p class="review__text">Добрый день! Хотим выразить огромную благодарность данному агенству в лице менеждера
+            Марины за ее профессионализм,
+            компетентность, вежливость<span class="dots">…</span><span class="more" style="display: none;">всегда чистые ноги. Лифт — да есть
+              лифт, который
+              спустит вас на пляж, удобно, оперативно! Море — просто
+              прекра</span></p><span class="review__more-btn more-btn">Ещё</span>
         </div>
         <div class="swiper-slide reviews__item review">
           <div class="review__header">
@@ -253,7 +259,10 @@
           </div>
           <p class="review__text">Добрый день! Хотим выразить огромную благодарность данному агенству в лице менеждера
             Марины за ее профессионализм,
-            компетентность, вежливость и терпение! Тур…</p>
+            компетентность, вежливость<span class="dots">…</span><span class="more" style="display: none;">всегда чистые ноги. Лифт — да есть
+              лифт, который
+              спустит вас на пляж, удобно, оперативно! Море — просто
+              прекра</span></p><span class="review__more-btn more-btn">Ещё</span>
         </div>
         <div class="swiper-slide reviews__item review">
           <div class="review__header">
@@ -275,7 +284,10 @@
           </div>
           <p class="review__text">Добрый день! Хотим выразить огромную благодарность данному агенству в лице менеждера
             Марины за ее профессионализм,
-            компетентность, вежливость и терпение! Тур…</p>
+            компетентность, вежливость<span class="dots">…</span><span class="more" style="display: none;">всегда чистые ноги. Лифт — да есть
+              лифт, который
+              спустит вас на пляж, удобно, оперативно! Море — просто
+              прекра</span></p><span class="review__more-btn more-btn">Ещё</span>
         </div>
       </div>
       <div class="reviews__navigation">
